--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
-<p>
-home works!
-</p>
+<h1 *ngIf="_userService.firstName">
+Welcome Home {{_userService.firstName}}!
+</h1>
+
+<h1 *ngIf="!_userService.firstName">
+  Please register!
+</h1>
